--- a/foxit_xamarin_ios/FoxitRDKDemo.Xamarin/Info.plist
+++ b/foxit_xamarin_ios/FoxitRDKDemo.Xamarin/Info.plist
@@ -40,5 +40,28 @@
 	<string>For adding pictures to your PDF files.</string>
 	<key>UIFileSharingEnabled</key>
 	<true/>
+	<key>MinimumOSVersion</key>
+	<string>11.0</string>
+	<key>UIMainStoryboardFile~ipad</key>
+	<string>Main</string>
+	<key>UIApplicationSceneManifest</key>
+	<dict>
+		<key>UIApplicationSupportsMultipleScenes</key>
+		<true/>
+		<key>UISceneConfigurations</key>
+		<dict>
+			<key>UIWindowSceneSessionRoleApplication</key>
+			<array>
+				<dict>
+					<key>UISceneConfigurationName</key>
+					<string>Default Configuration</string>
+					<key>UISceneDelegateClassName</key>
+					<string>SceneDelegate</string>
+					<key>UISceneStoryboardFile</key>
+					<string>Main</string>
+				</dict>
+			</array>
+		</dict>
+	</dict>
 </dict>
 </plist>
