--- a/foxit_xamarin_android/MSCommon/MSCommon/MSCommon.csproj
+++ b/foxit_xamarin_android/MSCommon/MSCommon/MSCommon.csproj
@@ -15,7 +15,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>Foxit.Android.Microsoft.Identity.Common</PackageId>
-    <PackageVersion>3.6.7.1</PackageVersion>
+    <PackageVersion>3.6.7.2</PackageVersion>
     <Title>Foxit.Android.Microsoft.Identity.Common</Title>
     <Authors>Microsoft</Authors>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
@@ -44,9 +44,6 @@
     <EmbeddedJar Include="..\..\libs\rms\accessors-smart-1.2.jar">
       <Link>Jars\accessors-smart-1.2.jar</Link>
     </EmbeddedJar>
-    <EmbeddedJar Include="..\..\libs\rms\gson-2.8.5.jar">
-      <Link>Jars\gson-2.8.5.jar</Link>
-    </EmbeddedJar>
   </ItemGroup>
 
     
@@ -56,14 +53,8 @@
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.AndroidX.AppCompat">
-      <Version>1.3.0</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.Browser">
-      <Version>1.3.0.5</Version>
-    </PackageReference>
-    <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
-      <Version>2.0.4.2</Version>
+    <PackageReference Include="GoogleGson">
+      <Version>2.10.1.5</Version>
     </PackageReference>
   </ItemGroup>
 </Project>
