--- a/foxit_xamarin_android/FoxitRDK/FoxitRDK/FoxitRDK.csproj
+++ b/foxit_xamarin_android/FoxitRDK/FoxitRDK/FoxitRDK.csproj
@@ -7,20 +7,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <IsBindingProject>true</IsBindingProject>
     <AssemblyName>Foxit.Android</AssemblyName>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <Deterministic>True</Deterministic>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <NoWarn>BG8400;BG8700;BG8403;BG8606;BG8605</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>Foxit.Android</PackageId>
-    <PackageVersion>8.4.2.1</PackageVersion>
+    <PackageVersion>9.0.0</PackageVersion>
     <Title>Foxit.Android</Title>
     <Authors>Foxit Software Incorporated</Authors>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
@@ -37,17 +33,37 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</Description>
     <Copyright>Copyright (C) 2003-2023, Foxit Software Inc.</Copyright>
     <PackageTags>Foxit PDF SDK</PackageTags>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <!-- Include symbol files (*.pdb) in the built .nupkg -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="LICENSE.txt" Pack="true" PackagePath=""/>
-  </ItemGroup>
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\FoxitRDK.aar">
+    <LibraryProjectZip Include="..\..\libs\FoxitRDK.aar" Condition="!Exists('..\..\libs\FoxitRDK\')">
       <Link>Jars\FoxitRDK.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
+
+  <ItemGroup>
+    <AndroidXNuGetTargetFolders Include="build\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="build\net6.0-android31.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\net6.0-android31.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Foxit.Android.targets" Pack="True" PackagePath="@@(AndroidXNuGetTargetFolders)" />
+    <None Include="LICENSE.txt" Pack="True" PackagePath="LICENSE.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\libs\FoxitRDK.aar" Pack="True" PackagePath="aar\FoxitRDK.aar" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InputJar Include="..\..\libs\FoxitRDK\classes.jar" Condition="Exists('..\..\libs\FoxitRDK\')"/>
+  </ItemGroup>
+
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
     <TransformFile Include="Transforms\EnumFields.xml" />
