--- a/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
+++ b/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
@@ -7,20 +7,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <IsBindingProject>true</IsBindingProject>
     <AssemblyName>Foxit.Android.UIExtensions</AssemblyName>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <Deterministic>True</Deterministic>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <NoWarn>CS0108;CS8766;CS8767;CS0114;CS0618;CS0672;BG8403;BG8700;BG8605;BG8606;BG8A04;BG8A00;BG8800;BG8C00;BG8400;BG8401;BG8402;BG8102;BG8604;BG8C01;BG8801;BG8701;BG8501;BG8503</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
     <AndroidClassParser>class-parse</AndroidClassParser>
     <AndroidCodegenTarget>XAJavaInterop1</AndroidCodegenTarget>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>Foxit.Android.UIExtensions</PackageId>
-    <PackageVersion>8.4.2.1</PackageVersion>
+    <PackageVersion>9.0.0</PackageVersion>
     <Title>Foxit.Android.UIExtensions</Title>
     <Authors>Foxit Software Incorporated</Authors>
     <RequireLicenseAcceptance>false</RequireLicenseAcceptance>
@@ -37,14 +33,13 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</Description>
     <Copyright>Copyright (C) 2003-2023, Foxit Software Inc.</Copyright>
     <PackageTags>Foxit PDF SDK UI UIExtensions</PackageTags>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <!-- Include symbol files (*.pdb) in the built .nupkg -->
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="LICENSE.txt" Pack="true" PackagePath=""/>
-  </ItemGroup>
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\FoxitRDKUIExtensions.aar">
+    <LibraryProjectZip Include="..\..\libs\FoxitRDKUIExtensions.aar" Condition="!Exists('..\..\libs\FoxitRDKUIExtensions\')">
       <Link>Jars\FoxitRDKUIExtensions.aar</Link>
     </LibraryProjectZip>
     <EmbeddedJar Include="..\..\libs\bcpkix-jdk15on-1.60.jar">
@@ -54,6 +49,27 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</Description>
       <Link>Jars\bcprov-jdk15on-1.60.jar</Link>
     </EmbeddedJar>
   </ItemGroup>
+
+  <ItemGroup>
+    <AndroidXNuGetTargetFolders Include="build\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="build\net6.0-android31.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\net6.0-android31.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Foxit.Android.UIExtensions.targets" Pack="True" PackagePath="@@(AndroidXNuGetTargetFolders)" />
+    <None Include="LICENSE.txt" Pack="True" PackagePath="LICENSE.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\libs\FoxitRDKUIExtensions.aar" Pack="True" PackagePath="aar\FoxitRDKUIExtensions.aar" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <InputJar Include="..\..\libs\FoxitRDKUIExtensions\classes.jar" Condition="Exists('..\..\libs\FoxitRDKUIExtensions\')"/>
+  </ItemGroup>
+
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
     <TransformFile Include="Transforms\EnumFields.xml" />
