--- a/foxit_xamarin_android/FoxitMobileScanningRDK/FoxitMobileScanningRDK/FoxitMobileScanningRDK.csproj
+++ b/foxit_xamarin_android/FoxitMobileScanningRDK/FoxitMobileScanningRDK/FoxitMobileScanningRDK.csproj
@@ -24,17 +24,36 @@
     <Copyright>Copyright (C) 2003-2023, Foxit Software Inc.</Copyright>
     <PackageTags>Foxit PDF Scan Scanning</PackageTags>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
-  <ItemGroup>
-    <None Include="LICENSE.txt" Pack="true" PackagePath=""/>
-  </ItemGroup>
   <ItemGroup>
     <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="..\..\libs\FoxitMobileScanningRDK.aar">
+    <LibraryProjectZip Include="..\..\libs\FoxitMobileScanningRDK.aar" Condition="!Exists('..\..\libs\FoxitMobileScanningRDK\')">
       <Link>Jars\FoxitMobileScanningRDK.aar</Link>
     </LibraryProjectZip>
   </ItemGroup>
+
+  <ItemGroup>
+    <AndroidXNuGetTargetFolders Include="build\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="build\net6.0-android31.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\monoandroid12.0" />
+    <AndroidXNuGetTargetFolders Include="buildTransitive\net6.0-android31.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Foxit.Android.Scanning.targets" Pack="True" PackagePath="@@(AndroidXNuGetTargetFolders)" />
+    <None Include="LICENSE.txt" Pack="True" PackagePath="LICENSE.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\libs\FoxitMobileScanningRDK.aar" Pack="True" PackagePath="aar\FoxitMobileScanningRDK.aar" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <InputJar Include="..\..\libs\FoxitMobileScanningRDK\classes.jar" Condition="Exists('..\..\libs\FoxitMobileScanningRDK\')"/>
+  </ItemGroup>
+
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
     <TransformFile Include="Transforms\EnumFields.xml" />
