--- a/foxit_xamarin_ios/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions.Framework.targets
+++ b/foxit_xamarin_ios/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions.Framework.targets
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
-    <Target Name="_UIextensionsDynamicesolveNativeReferences" BeforeTargets="ResolveNativeReferences" Condition=" '$(OS)' == 'Unix' ">
+    <Target Name="_UIextensionsDynamicesolveNativeReferences" BeforeTargets="ResolveNativeReferences">
         
         <ItemGroup>
             <NativeReference Include="..\..\libs\uiextensionsDynamic.xcframework" Condition="Exists('..\..\libs\uiextensionsDynamic.xcframework')" >
