--- a/foxit_xamarin_ios/nuspec/Foxit.iOS.UIExtensions.nuspec
+++ b/foxit_xamarin_ios/nuspec/Foxit.iOS.UIExtensions.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata minClientVersion="">
     <id>Foxit.iOS.UIExtensions</id>
-    <version>8.4.1</version>
+    <version>9.0.0</version>
     <title>Foxit.iOS.UIExtensions</title>
     <authors>Foxit Software Incorporated</authors>
     <owners>Foxit Software Incorporated</owners>
@@ -25,15 +25,15 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</description>
     <language></language>
     <dependencies>
       <group targetFramework="Xamarin.iOS1.0">
-        <dependency id="Foxit.iOS" version="8.4.1" />
+        <dependency id="Foxit.iOS" version="9.0.0" />
       </group>
       <group targetFramework="net6.0-ios11.0">
         <dependency id="System.Runtime.InteropServices.NFloat.Internal" version="6.0.1" exclude="Build,Analyzers" />
-        <dependency id="Foxit.iOS" version="8.4.1" />
+        <dependency id="Foxit.iOS" version="9.0.0" />
       </group>
       <group targetFramework="net6.0-maccatalyst13.1">
         <dependency id="System.Runtime.InteropServices.NFloat.Internal" version="6.0.1" exclude="Build,Analyzers" />
-        <dependency id="Foxit.iOS" version="8.4.1" />
+        <dependency id="Foxit.iOS" version="9.0.0" />
       </group>
     </dependencies>
     <frameworkAssemblies>
@@ -48,7 +48,7 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</description>
   </metadata>
   <files>
       <file src="../LICENSE.txt" target="" />
-      <file src="../libs/uiextensionsDynamic.xcframework.zip" target="runtimes/uiextensionsDynamic.xcframework.zip" />
+      <file src="../libs/uiextensionsDynamic.xcframework.tar" target="runtimes/uiextensionsDynamic.xcframework.tar" />
       <file src="../Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions.Nuget.targets" target="build/Foxit.iOS.UIExtensions.targets" />
       <file src="../Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions.Nuget.targets" target="buildTransitive/Foxit.iOS.UIExtensions.targets" />
       <file src="../Foxit.iOS.UIExtensions/Foxit.iOS.UIExtensions/bin/Release/net6.0-ios/Foxit.iOS.UIExtensions.dll" target="lib/net6.0-ios11.0" />
