refs#SDKRD-16199 Update code to support Foxit PDF SDK for Android 9.1.0

--- a/foxit_xamarin_android/FoxitRDKDemo.Net/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/FoxitRDKDemo.Net/complete_pdf_viewer.csproj
@@ -119,5 +119,6 @@
     <PackageReference Include="Foxit.Android" Version="9.1.0" />
     <PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0" />
+    <PackageReference Include="Xamarin.Google.MLKit.DigitalInk.Recognition" Version="118.0.0" />
   </ItemGroup>
 </Project>
