--- a/foxit_xamarin_android/FoxitRDKDemo.Xamarin/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/FoxitRDKDemo.Xamarin/complete_pdf_viewer.csproj
@@ -201,12 +201,13 @@
       <Version>1.0.0.8</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.3.1</Version>
+      <Version>2.6.1.1</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="Xamarin.Google.Android.Material">
       <Version>1.4.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Google.MLKit.DigitalInk.Recognition" Version="118.0.0" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
