--- a/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
+++ b/foxit_xamarin_android/FoxitUIExtensions/FoxitUIExtensions/FoxitUIExtensions.csproj
@@ -67,7 +67,7 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</Description>
   </ItemGroup>
 
   <ItemGroup>
-    <InputJar Include="..\..\libs\FoxitRDKUIExtensions\classes.jar" Condition="Exists('..\..\libs\FoxitRDKUIExtensions\')"/>
+    <InputJar Include="..\..\libs\FoxitRDKUIExtensions\classes.jar" Condition="Exists('..\..\libs\FoxitRDKUIExtensions\')" />
   </ItemGroup>
 
   <ItemGroup>
@@ -97,7 +97,8 @@ the website https://developers.foxitsoftware.com/pdf-sdk/.</Description>
       <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
-      <Version>2.2.0</Version>
+      <Version>2.6.1.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Google.MLKit.DigitalInk.Recognition" Version="118.0.0" />
   </ItemGroup>
 </Project>
