--- a/foxit_xamarin_android/complete_pdf_viewer/Assets/uiextensions_config.json
+++ b/foxit_xamarin_android/complete_pdf_viewer/Assets/uiextensions_config.json
@@ -62,6 +62,7 @@
       "highlightLinkColor": "#16007fff", //Set the highlight color with alpha
       "fullscreen": true, // Enter the full screen immediately after opening. If the user clicks on the page, the toolbar will be displayed. After 5 seconds, if it is in full screen mode, the toolbar and other auxiliary toolbar buttons will be hidden automatically.
       "showPenOnlySwitch": true, // Only use for pencil and eraser
+      "enableHandwritingRecognition": false,
       "enableTopbarDraggable": 2,// Is it possible to drag the toolbar to change its position(left, right or top), this value can be 0, 1, 2, 3;
                                  // 0: Neither the phone nor the tablet can drag the topbar;
                                  // 1: Only the mobile phone can drag the topbar;
