--- a/foxit_xamarin_ios/CompletePdfViewer/Resources/uiextensions_config.json
+++ b/foxit_xamarin_ios/CompletePdfViewer/Resources/uiextensions_config.json
@@ -60,6 +60,7 @@
         "highlightFormColor":"#200066cc",
         "fullscreen" : true,
         "enableTopbarDraggable" : 2,
+        "enableHandwritingRecognition":true,
         "annotations": {
             "continuouslyAdd" : true,
             "highlight": {
