--- a/foxit_xamarin_android/FoxitRDKDemo.Net/complete_pdf_viewer.csproj
+++ b/foxit_xamarin_android/FoxitRDKDemo.Net/complete_pdf_viewer.csproj
@@ -119,5 +119,7 @@
     <PackageReference Include="Foxit.Android" Version="9.1.0" />
     <PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0" />
     <PackageReference Include="Xamarin.Google.Android.Material" Version="1.4.0" />
+    <PackageReference Include="Square.OkIO" Version="3.2.0" />
+    <PackageReference Include="Xamarin.Google.MLKit.DigitalInk.Recognition" Version="118.1.0" />
   </ItemGroup>
 </Project>
