--- a/foxit_maui/foxit_maui/foxit_maui.csproj
+++ b/foxit_maui/foxit_maui/foxit_maui.csproj
@@ -77,7 +77,7 @@
 	  	</PackageReference>
 	  	<PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0">
 	  	</PackageReference>
-	  	<PackageReference Include="Square.OkIO" Version="3.2.0" />
+	  	<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.1" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.Contains('-ios')) or $(TargetFramework.Contains('-maccatalyst'))">
