--- a/foxit_maui/foxit_maui/foxit_maui.csproj
+++ b/foxit_maui/foxit_maui/foxit_maui.csproj
@@ -20,7 +20,6 @@
 		<!-- Versions -->
 		<ApplicationDisplayVersion>9.1.0</ApplicationDisplayVersion>
 		<ApplicationVersion>1</ApplicationVersion>
-
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">13.1</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
@@ -77,8 +76,17 @@
 	  	</PackageReference>
 	  	<PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0">
 	  	</PackageReference>
-	  	<PackageReference Include="Xamarin.AndroidX.Work.Runtime" Version="2.7.1.1" />
+		<PackageReference Include="Square.OkIO" Version="3.2.0">
+		</PackageReference>
+		<PackageReference Include="Xamarin.Firebase.Datatransport" Version="118.2.0" />
+		<PackageReference Include="Xamarin.Google.MLKit.DigitalInk.Recognition" Version="118.0.0" />
+	    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Common" Version="2.6.1.2" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime" Version="2.6.1.2" />
+        <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime.Ktx" Version="2.6.1.2" />
+		<PackageReference Include="Xamarin.AndroidX.Activity" Version="1.7.2" />
+        <PackageReference Include="Xamarin.AndroidX.Activity.Ktx" Version="1.7.2" />
 	</ItemGroup>
+	
 
 	<ItemGroup Condition="$(TargetFramework.Contains('-ios')) or $(TargetFramework.Contains('-maccatalyst'))">
         <BundleResource Include="..\..\foxit_xamarin_ios\libs\rdk_key.txt">
