--- a/foxit_maui/foxit_maui/foxit_maui.csproj
+++ b/foxit_maui/foxit_maui/foxit_maui.csproj
@@ -75,9 +75,13 @@
 	<ItemGroup Condition="$(TargetFramework.Contains('-android'))">
 	  	<PackageReference Include="Foxit.Android" Version="9.1.0">
 	  	</PackageReference>
-	  	<PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0">
+	  	<PackageReference Include="Foxit.Android.UIExtensions" Version="9.1.0.1">
 	  	</PackageReference>
-	  	<PackageReference Include="Square.OkIO" Version="3.2.0" />
+	    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Common" Version="2.6.1.2" />
+	    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime" Version="2.6.1.2" />
+	    <PackageReference Include="Xamarin.AndroidX.Lifecycle.Runtime.Ktx" Version="2.6.1.2" />
+	    <PackageReference Include="Xamarin.AndroidX.Activity" Version="1.7.2" />
+	    <PackageReference Include="Xamarin.AndroidX.Activity.Ktx" Version="1.7.2" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(TargetFramework.Contains('-ios')) or $(TargetFramework.Contains('-maccatalyst'))">
